--- a/Fuzzy CMeans.ipynb
+++ b/Fuzzy CMeans.ipynb
@@ -956,7 +956,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x11665c5d0>"
+       "<seaborn.axisgrid.PairGrid at 0x11b54d910>"
       ]
      },
      "execution_count": 18,
@@ -3427,7 +3427,7 @@
      "text": [
       "p-value=0.000\n",
       "\n",
-      "Se rechaza la hipótesis nula H0 para la caracterísitica precip (diferentes distribuciones).\n"
+      "Se rechaza la hipótesis nula H0 para la característica precip (diferentes distribuciones).\n"
      ]
     }
    ],
@@ -3442,9 +3442,9 @@
     "alpha = 0.05\n",
     "\n",
     "if pval > alpha:\n",
-    "    print('Se acepta la hipótesis nula H0 para la caracterísitica precip (mismas distribuciones).')\n",
+    "    print('Se acepta la hipótesis nula H0 para la característica precip (mismas distribuciones).')\n",
     "else:\n",
-    "    print('Se rechaza la hipótesis nula H0 para la caracterísitica precip (diferentes distribuciones).')"
+    "    print('Se rechaza la hipótesis nula H0 para la característica precip (diferentes distribuciones).')"
    ]
   },
   {
@@ -3458,7 +3458,7 @@
      "text": [
       "p-value=0.000\n",
       "\n",
-      "Se rechaza la hipótesis nula H0 para la caracterísitica precip (diferentes distribuciones).\n"
+      "Se rechaza la hipótesis nula H0 para la característica distance (diferentes distribuciones).\n"
      ]
     }
    ],
@@ -3473,9 +3473,9 @@
     "alpha = 0.05\n",
     "\n",
     "if pval > alpha:\n",
-    "    print('Se acepta la hipótesis nula H0 para la caracterísitica precip (mismas distribuciones).')\n",
+    "    print('Se acepta la hipótesis nula H0 para la característica distance (mismas distribuciones).')\n",
     "else:\n",
-    "    print('Se rechaza la hipótesis nula H0 para la caracterísitica precip (diferentes distribuciones).')"
+    "    print('Se rechaza la hipótesis nula H0 para la característica distance (diferentes distribuciones).')"
    ]
   },
   {
